Add internationalization support